docs: Add cross-platform installation guidelines for Eve's Apple